--- a/.github/workflows/flutter-web.yml
+++ b/.github/workflows/flutter-web.yml
@@ -16,7 +16,7 @@ jobs:
           flutter-version: 'stable'
 
       - run: flutter pub get
-      - run: flutter build web
+      - run: flutter build web --base-href /hello-devops-flutter/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
