--- a/.github/workflows/flutter-web.yml
+++ b/.github/workflows/flutter-web.yml
@@ -2,7 +2,10 @@ name: Flutter Web CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -13,7 +16,7 @@ jobs:
 
       - uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
+          channel: "stable"
 
       - run: flutter pub get
       - run: flutter build web --base-href /hello-devops-flutter/
