use self-hosted runner and deploy to laragon

--- a/.github/workflows/flutter-web.yml
+++ b/.github/workflows/flutter-web.yml
@@ -1,4 +1,4 @@
-name: Flutter Web CI
+name: Deploy to Laragon
 
 on:
   push:
@@ -9,7 +9,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v4
@@ -19,10 +19,10 @@ jobs:
           channel: "stable"
 
       - run: flutter pub get
-      - run: flutter build web --base-href /hello-devops-flutter/
+      - run: flutter build web
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build/web
+      - name: Deploy to Laragon
+        run: |
+            rm -rf E:\Project\laragon\www\hello-flutter
+            mkdir E:\Project\laragon\www\hello-flutter
+            cp -r build\web\* E:\Project\laragon\www\hello-flutter\ 
